<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.movie.lister.ui.MovieViewModel" />

        <import type="android.view.View"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@{viewModel.selectedMovieTitle}"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayoutDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageViewPoster"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintWidth_percent="0.4" />

                        <TextView
                            android:id="@+id/textViewGenresHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/genres"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toTopOf="@id/imageViewPoster" />

                        <TextView
                            android:id="@+id/textViewGenres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@{viewModel.genres}"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewGenresHeader" />

                        <TextView
                            android:id="@+id/textViewRuntimeHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/runtime"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewGenres" />

                        <TextView
                            android:id="@+id/textViewRuntime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@{viewModel.runtime}"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintBottom_toTopOf="@id/textViewRatingHeader"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewRuntimeHeader" />

                        <TextView
                            android:id="@+id/textViewRatingHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/rating"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewRuntime" />

                        <TextView
                            android:id="@+id/textViewRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@{@string/vote_average_and_count(viewModel.movieDetails.voteAverage,viewModel.movieDetails.voteCount)}"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewRatingHeader" />

                        <TextView
                            android:id="@+id/textViewDirectorHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/director"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewRating" />

                        <TextView
                            android:id="@+id/textViewDirectors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@{viewModel.director}"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewDirectorHeader" />

                        <TextView
                            android:id="@+id/textViewStarringHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/starring"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewDirectors" />

                        <TextView
                            android:id="@+id/textViewStarring"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:text="@{viewModel.starring}"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toEndOf="@id/imageViewPoster"
                            app:layout_constraintTop_toBottomOf="@id/textViewStarringHeader" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:id="@+id/textViewOverviewHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/overview"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/constraintLayoutDetails" />

                    <TextView
                        android:id="@+id/textViewOverview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="5dp"
                        android:text="@{viewModel.movieDetails.overview}"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewOverviewHeader" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:visibility="@{viewModel.isSearching() ? View.VISIBLE : View.GONE,default =gone}">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>